WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174501
[WTF] Newly added AtomicStringImpl should use BufferInternal static string if StringImpl is static
https://bugs.webkit.org/show_bug.cgi?id=174501
Summary
[WTF] Newly added AtomicStringImpl should use BufferInternal static string if...
Yusuke Suzuki
Reported
2017-07-14 06:47:18 PDT
[WTF] Newly added AtomicStringImpl should use BufferInternal static string if StringImpl::requiresCopy returns false
Attachments
Patch
(13.37 KB, patch)
2017-07-14 07:11 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews114 for mac-elcapitan
(1.21 MB, application/zip)
2017-07-14 08:20 PDT
,
Build Bot
no flags
Details
Patch
(13.37 KB, patch)
2017-07-14 08:29 PDT
,
Yusuke Suzuki
darin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(16.71 KB, patch)
2017-07-14 09:38 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews112 for mac-elcapitan
(1.77 MB, application/zip)
2017-07-14 10:17 PDT
,
Build Bot
no flags
Details
Patch for landing after stabilizing is done
(16.65 KB, patch)
2017-07-15 07:27 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2017-07-14 07:11:08 PDT
Created
attachment 315418
[details]
Patch
Build Bot
Comment 2
2017-07-14 08:20:42 PDT
Comment on
attachment 315418
[details]
Patch
Attachment 315418
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/4119276
Number of test failures exceeded the failure limit.
Build Bot
Comment 3
2017-07-14 08:20:43 PDT
Created
attachment 315422
[details]
Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Yusuke Suzuki
Comment 4
2017-07-14 08:29:16 PDT
Created
attachment 315423
[details]
Patch
Darin Adler
Comment 5
2017-07-14 09:22:33 PDT
Comment on
attachment 315423
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=315423&action=review
> Source/WTF/wtf/text/AtomicStringImpl.cpp:128 > const CharacterType* s;
Seems like this should be named "characters" or "string" rather than a single letter. Worth coming back to and cleaning up some day.
Yusuke Suzuki
Comment 6
2017-07-14 09:29:31 PDT
Comment on
attachment 315423
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=315423&action=review
>> Source/WTF/wtf/text/AtomicStringImpl.cpp:128 >> const CharacterType* s; > > Seems like this should be named "characters" or "string" rather than a single letter. Worth coming back to and cleaning up some day.
Yeah, "characters" sounds fine.
Yusuke Suzuki
Comment 7
2017-07-14 09:38:05 PDT
Created
attachment 315434
[details]
Patch for landing
Build Bot
Comment 8
2017-07-14 10:17:43 PDT
Comment on
attachment 315423
[details]
Patch
Attachment 315423
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/4119740
New failing tests: storage/indexeddb/modern/new-database-after-user-delete.html
Build Bot
Comment 9
2017-07-14 10:17:44 PDT
Created
attachment 315439
[details]
Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Yusuke Suzuki
Comment 10
2017-07-14 10:37:32 PDT
Committed
r219510
: <
http://trac.webkit.org/changeset/219510
>
Matt Lewis
Comment 11
2017-07-14 13:10:43 PDT
This is causing an api failure on iOS.
https://build.webkit.org/builders/Apple%20iOS%2010%20Simulator%20Debug%20WK2%20%28Tests%29/builds/2725/steps/run-api-tests/logs/stdio
Tests that failed: WTF.StringImplNullSymbolToAtomicString
Yusuke Suzuki
Comment 12
2017-07-14 13:25:35 PDT
Comment on
attachment 315434
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=315434&action=review
> Source/WTF/wtf/text/AtomicStringImpl.cpp:423 > + ASSERT_WITH_MESSAGE(string.length(), "Empty string should be already handled.");
There is one more length() == 0 string: null symbol! We need to keep this lines. After rolling out my patch, I'll revert this part partially and reland it.
Yusuke Suzuki
Comment 13
2017-07-14 13:26:03 PDT
(In reply to Yusuke Suzuki from
comment #12
)
> Comment on
attachment 315434
[details]
> Patch for landing > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=315434&action=review
> > > Source/WTF/wtf/text/AtomicStringImpl.cpp:423 > > + ASSERT_WITH_MESSAGE(string.length(), "Empty string should be already handled."); > > There is one more length() == 0 string: null symbol! We need to keep this > lines. > After rolling out my patch, I'll revert this part partially and reland it.
With assertion and comments.
Yusuke Suzuki
Comment 14
2017-07-15 07:27:18 PDT
Created
attachment 315543
[details]
Patch for landing after stabilizing is done Patch for landing
Yusuke Suzuki
Comment 15
2017-07-21 08:38:04 PDT
Committed
r219725
: <
http://trac.webkit.org/changeset/219725
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug